src/content/docs/sdk/unity/v4/features/preinstalled-zh.mdx
---
title: 发送预安装应用活动
description: 配置推广活动，以从预安装应用发送信息。
slug: zh/sdk/unity/v4/features/preinstalled
versions:
   - label: v5
     value: v5
     default: true
   - label: v4
     value: v4
redirects:
   v5: /zh/sdk/unity/features/preinstalled
---

您可以通过 Adjust SDK 来记录用户设备上的预安装应用的活动，借此发送未通过推广活动下载应用的用户信息。

您的 config 对象包含一个 `bool` `preinstallTrackingEnabled` 属性，该属性控制此功能。要启用预安装监测，请用 `true` 参数调用 `setPreinstallTrackingEnabled` 方法。

```cs
AdjustConfig adjustConfig = new AdjustConfig("{YourAppToken}", AdjustEnvironment.Sandbox, true);
//...
adjustConfig.setPreinstallTrackingEnabled(true);
//...
Adjust.start(adjustConfig);
```

Adjust SDK 提供 5 种监测预安装应用的方法：

-  [系统属性](#system-properties) \(仅限安卓\)。
-  [内容提供器](#content-provider) \(仅限安卓\)。
-  [系统安装器接收器](#system-installer-receiver) \(仅限安卓\)。
-  [全局可读目录](#world-readable-directory) \(仅限安卓\)。
-  [默认链接识别码](#default-link-token) \(iOS 和安卓\)。

## 系统属性 \(System Properties\) {#system-properties}

原始设备制造商 \(OEM\) 可借助安卓系统属性归因预安装应用。OEM \(原始设备制造商\) 将归因信息写入一个文件，并将其路径添加至系统属性。Adjust SDK 在初始化时读取该文件并归因安装。

## 内容提供器 \(Content Provider\) {#content-provider}

内容提供器方法采用只读内容提供器。SDK 使用内容分解器从请求中收集预安装信息。

要设置权限，请将下列行添加至您的 `AndroidManifest.xml` 文件。

<CodeBlock title="AndroidManifest.xml">

```xml
<uses-permission android:name="com.adjust.preinstall.READ_PERMISSION"/>
```

</CodeBlock>

要查看设备上的预安装应用列表，请将下列行添加至您的 `AndroidManifest.xml` 文件。

<CodeBlock title="AndroidManifest.xml">

```xml
<queries>
   <intent>
       <action android:name="com.attribution.REFERRAL_PROVIDER"/>
   </intent>
</queries>

```

</CodeBlock>

## 系统安装器接收器 \(System Installer Receiver\) {#system-installer-receiver}

系统安装器方法使用广播接收器。系统安装器会广播预安装信息。Adjust SDK 使用系统预安装 referrer 接收器读取该信息。

要设置接收器，请将以下内容添加至您的 `AndroidManifest.xml` 文件。

<CodeBlock title="AndroidManifest.xml">

```xml
<receiver android:name="com.adjust.sdk.AdjustPreinstallReferrerReceiver">
   <intent-filter>
      <action android:name="com.attribution.SYSTEM_INSTALLER_REFERRER" />
   </intent-filter>
</receiver>

```

</CodeBlock>

## 全局可读目录 {#world-readable-directory}

将预安装应用的归因信息存储在一个全局可读的目录中。SDK 会在安装时从此文件中读取信息，以此归因用户。系统加密协议会保护应用数据。

将包含预安装信息的文件路径传送到 `setPreinstallFilePath` 方法，以允许 Adjust 读取该信息。

```cs
AdjustConfig adjustConfig = new AdjustConfig("{YourAppToken}", AdjustEnvironment.Sandbox, true);
//...
adjustConfig.setPreinstallFilePath("../EngagementFile.xml");
//...
Adjust.start(adjustConfig);
```

## 默认链接识别码 {#default-link-token}

通过设置默认链接识别码，您可以将所有预安装归因到预先定义的 Adjust 链接。Adjust 将所有信息记录在此识别码下，直至归因来源发生变化。设置方法：

1. [在 Campaign Lab 中创建一个新的推广活动链接](https://help.adjust.com/zh/article/links)。

   ```http
   https://app.adjust.com/{token}
   ```

2. 复制该识别码，将其传送到应用委托文件中的 `setDefaultTracker` 方法上。

   ```cs
   AdjustConfig adjustConfig = new AdjustConfig("{YourAppToken}", AdjustEnvironment.Sandbox);
   //...
   adjustConfig.setDefaultTracker("{TrackerToken}");
   //...
   Adjust.start(adjustConfig);
   ```

3. 创建并运行应用。如果您启用了日志，就应该能在日志中看到如下信息

   ```text
   Default tracker: 'abc123'.
   ```
